# Basic-FPS-OpenGL

./: CMakeLists.txt  README.md
FPSGame/: FPSGame  FPSGame.cpp  FPSGame.h  MapFragmentShader.fragmentshader  Minimap.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  SunVertexShader.vertexshader  map.cpp  map.h
FPSGame/textures/: mapv1.blend
common/: objloader.cpp
playground/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  map.cpp  map.h  playground.cpp  playground.h
playground/textures/: mapv1.blend  mapv1.blend1
